[project]
name = "openai-tools-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain-community>=0.3.14",
    "langchain-neo4j>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.14",
    "neo4j>=5.27.0",
]
